// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage component Should render correctly 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="s"
        tag="div"
      >
        <React.Fragment>
          <SubTitle
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Bad credentials
          </SubTitle>
          <div
            className="u-flex u-w-100"
          >
            <Text
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              Bad credentials. Check the konnector fields and run the connection again.
            </Text>
          </div>
        </React.Fragment>
      </Stack>
    </div>
  </Stack>
</div>
`;

exports[`ErrorMessage component Should render correctly if two fa session expired 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="s"
        tag="div"
      >
        <React.Fragment>
          <SubTitle
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Relaunch the connexion to the service to fetch your data
          </SubTitle>
          <div
            className="u-flex u-w-100"
          >
            <Text
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              The last connexion to the service failed; please launch it again. You may have to provide a validation code.
            </Text>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <Wrapper
        trigger={Object {}}
      >
        [Function]
      </Wrapper>
    </div>
  </Stack>
</div>
`;

exports[`ErrorMessage component Should render correctly if wrong twofa code error 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="s"
        tag="div"
      >
        <React.Fragment>
          <SubTitle
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Wrong two-factore code provided
          </SubTitle>
          <div
            className="u-flex u-w-100"
          >
            <Text
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              The two-factor code provided is wrong, please start again.
            </Text>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <Wrapper
        trigger={Object {}}
      >
        [Function]
      </Wrapper>
    </div>
  </Stack>
</div>
`;
